- Added NumberEntryDialog class (Sean Long)
- Added MiniFrame class, and etc/miniframe.rb sample (Alex Fenton)
- Added support for Window#get_text_extent (Sean Long)
- Added support for Wx::GetKeyState and KeyCode (Sean Long)
- Enabled SWIG option -fvirtual to reduce code size (Daniel F. Savarese)
- Enabled SWIG feature compactdefaultargs to reduce code size 
    (Daniel F. Savarese)

====0.0.32 tag included all of this:===
- Fix BoxSizer and StaticBoxSizer (Daniel F. Savarese and Roy Sutton)
    Added "virtual" where needed, and added some missing methods
- Get bigdemo ToolBar sample working (Roy Sutton)
- Get text/textctrl.rb sample working (Roy Sutton)
- Remove unneeded typemaps (Alex Fenton)
- Ignore redundant variations of methods like get_size and get_position,
    some constructors and cases of create, draw_lines, draw_polygon,
	  ListBox#set
- Ignore (temporarily?) methods that now give errors:
    get_text_extent, get_multi_line_text_extent
- Fix SWIG warnings by adding missing virtual destructor declarations
- Now include SWIG's ruby typemaps.i file (Alex Fenton)
- Reverted the wxWidget Assert catching that was just put in
  (It was causing hanging intead of terminating the app)
- Added DISOWN markers for Frame and MDIParentFrame MenuBars (Roy Sutton)
- Add ListEvent and ListItem; improve ListCtrl and ListItemAttr (Roy Sutton)
- Fix icon handling in bigdemo ListCtrl_virtual code (Roy Sutton)
- Catch wxWidgets Asserts and raise them as Ruby fatal exceptions, to avoid 
  a cascade of worthless "addr2line" console output on Linux
- Fix bigdemo to allow right-side splitter to be resized. (It was being 
  created with the splitter bar so high that it was under the tabs of the 
	notebook, and therefore couldn't be resized)
- Fix wxTextCtrl.h compile errors by removing overflow() (Roy Sutton)
- Fix swig object tracking, hopefully fixing many crashes (Roy Sutton)
- Patch to avoid almost immediate crashing in all samples on Linux after 