@@ -1,0 +1,18 @@
+#   Copyright 2004-2005 by Kevin Smith
+#   released under the MIT-style wxruby2 license
+
+%include "../common.i"
+
+%module(directors="1") wxWizardPageSimple
+
+%{
+#include <wx/wizard.h>
+%}
+
+%import "include/wxObject.h"
+%import "include/wxEvtHandler.h"
+%import "include/wxWindow.h"
+%import "include/wxPanel.h"
+%import "include/wxWizardPage.h"
+
+%include "include/wxWizardPageSimple.h"
