@@ -1,3 +1,5 @@
+- Added Wizard support (Wizard, WizardEvent, WizardPage, WizardPageSimple)
+    and a sample (Alex Fenton)
 - Added NumberEntryDialog class (Sean Long)
 - Added MiniFrame class, and etc/miniframe.rb sample (Alex Fenton)
 - Added support for Window#get_text_extent (Sean Long)
